<resources>
    <string name="app_name">ACalculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="C">C</string>
    <string name="equals_sign">=</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="x_sign">x</string>
    <string name="division_sign">/</string>
    <string name="percentage_sign">%</string>
    <string name="less_sign"><![CDATA[<]]></string>
    <string name="dot">.</string>
    <string name="_00">00</string>
    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expression_label">Expression:</string>
    <string name="result_label">Result:</string>
    <string name="datetime_label">DateTime:</string>
    <string name="no_history_available">No History Available</string>
</resources>