<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:gravity="bottom"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:background="@color/dark_grey"
        android:layout_margin="5dp"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/C" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/less_sign"/>

        <Button
            android:id="@+id/button_percentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/percentage_sign" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/division_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/x_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button_subtraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/minus_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_1"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button_adition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/plus_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/dot" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/equals_sign" />
    </LinearLayout>
</LinearLayout>